<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kitchen Sink</string>
    <string name="app_description">Complementary app for Lehman College CMP-464 and CMP-788</string>
    <string name="action_settings">Settings</string>
    <string name="lehman_college">Lehman College</string>
    <string name="subject">Topics In Computer Science</string>
    <string name="topic">Android Development</string>
    <string name="home">Home</string>
    <string name="hello">Hello, Ian Neville</string>
    <string name="lab0">Lab 0</string>
    <string name="lab1">Lab 1</string>
    <string name="lab2">Lab 2</string>
    <string name="lab3">Lab 3</string>
    <string name="lab4">Lab 4</string>

    <string-array name="labs_array">
        <item>@string/app_name</item>
        <item>@string/hello</item>
        <item>@string/lab0</item>
        <item>@string/lab1</item>
        <item>@string/lab2</item>
        <item>@string/lab3</item>
        <item>@string/lab4</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>

    <string name="resources">Resources</string>
    <string name="syllabus">Syllabus: www.bit.ly/cmp464-syllabus</string>
    <string name="fundamentals">Fundamentals: www.bit.ly/androidfundamentals</string>
    <string name="instructor">Instructor: Hendrix Tavarez</string>
    <string name="email">Email: lehman@lockerfish.com</string>

    <string name="greetings">You must not be afraid to dream a little bigger darling.</string>
</resources>
